--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             height:100vh;text-align:center;background:transparent;">
 
     <h1 style="font-size:38px;margin-bottom:40px;color:var(--accent);font-weight:700;">
-      Welcome to CodeGen V5.5.1
+      Welcome to CodeGen V5.5.2
     </h1>
 
     <div style="display:flex;flex-direction:column;gap:16px;width:200px;">
@@ -1153,11 +1153,11 @@
       </div>
       <div style="display:flex;gap:12px;margin-bottom:12px;">
         <label class="inline" style="font-size:14px;">
-          <input type="radio" name="themeChoice" id="themeOriginal" value="original" style="margin-right:6px;">
+          <input type="radio" name="themeChoice" id="themeOriginal" value="Original" style="margin-right:6px;">
           Original
         </label>
         <label class="inline" style="font-size:14px;">
-          <input type="radio" name="themeChoice" id="themeCommercial" value="commercial" style="margin-right:6px;">
+          <input type="radio" name="themeChoice" id="themeCommercial" value="Modern" style="margin-right:6px;">
           Commercial
         </label>
       </div>
