--- a/index.html
+++ b/index.html
@@ -1153,12 +1153,12 @@
       </div>
       <div style="display:flex;gap:12px;margin-bottom:12px;">
         <label class="inline" style="font-size:14px;">
-          <input type="radio" name="themeChoice" id="themeOriginal" value="Original" style="margin-right:6px;">
+          <input type="radio" name="themeChoice" id="themeOriginal" value="original" style="margin-right:6px;">
           Original
         </label>
         <label class="inline" style="font-size:14px;">
-          <input type="radio" name="themeChoice" id="themeCommercial" value="Modern" style="margin-right:6px;">
-          Commercial
+          <input type="radio" name="themeChoice" id="themeCommercial" value="commercial" style="margin-right:6px;">
+          Modern
         </label>
       </div>
       <div class="btnbar" style="justify-content:flex-end;">
