--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
     body.theme-commercial .keyrow.selected,
     body.theme-commercial .doorrow.selected{
-      background:#e8f0ff;
+      background:#ffffff;
       border-color:var(--accent);
     }
 
@@ -404,7 +404,7 @@
     }
 
     body.theme-commercial .kgCB.viewmode{
-      accent-color:#247CFF;
+      accent-color:var(--accent);
     }
 
     body.theme-commercial .pinHdr,
@@ -423,7 +423,14 @@
       color:#000000;
     }
 
-
+    body.theme-commercial #doorKeyingList label {
+      color: var(--fg);
+    }
+    
+    body.theme-commercial #copyKeyingList,
+    body.theme-commercial #copyKeyingList * {
+      color: var(--fg) !important;
+    }
 
 
 
