--- a/index.html
+++ b/index.html
@@ -441,6 +441,11 @@
     body.theme-commercial #copyKeyingList * {
       color: var(--fg) !important;
     }
+    
+    body.theme-commercial #expandDesignModal label{
+      color: var(--fg);
+    }
+
 
 
 
