--- a/index.html
+++ b/index.html
@@ -3366,7 +3366,7 @@ ${pad(beforeLine2,22)}${afterLine2}`;
           if (!parts.length){
             const msg = document.createElement('div');
             msg.className = 'muted';
-            msg.textContent = 'No part numbers entered yet.';
+            msg.textContent = 'No Part Numbers Used Yet.';
             listHost.appendChild(msg);
           } else {
             const table = document.createElement('table');
