--- a/index.html
+++ b/index.html
@@ -3139,7 +3139,7 @@ ${pad(beforeLine2,22)}${afterLine2}`;
                    </div>
                    <div>
                      <label for="sigPhoneInput">Phone Number</label>
-                     <input id="sigPhoneInput" type="text">
+                     <input id="sigPhoneInput" type="tel">
                    </div>
                  </div>
                  <div class="btnbar" style="justify-content:flex-end;margin-top:14px;">
