--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
     .modal .row{display:flex; gap:10px; margin-top:8px}
     .modal .row > div{flex:1 1 160px}
     .modal .btnbar{display:flex; gap:10px; justify-content:flex-end; margin-top:14px}
-    .modal input[type=number]{
+    .modal input[type=number],
+    .modal input[type=tel]{
       width:100%; background:var(--field-bg); border:1px solid #1e1e1e; color:var(--fg);
       border-radius:12px; padding:10px 12px; font-size:16px; outline:none
     }
