--- a/index.html
+++ b/index.html
@@ -446,6 +446,18 @@
     body.theme-commercial #expandDesignModal label{
       color: var(--fg);
     }
+    
+    /* TMK + Array theme-aware headings */
+    label.createHeading{
+        font-size:16px;
+        font-weight:600;
+        color:#ffffff;            /* Original theme */
+    }
+
+    body.theme-commercial label.createHeading{
+        color:#000000;            /* Commercial theme */
+    }
+
 
 
 
@@ -569,11 +581,11 @@
       <div class="row">
 
         <div>
-          <label for="tmk" style="font-size:16px;font-weight:600;color:#ffffff;">TMK</label>
+          <label for="tmk" class="createHeading">TMK</label>
           <input id="tmk" type="text" inputmode="numeric" placeholder="Example: 53142">
         </div>
         <div>
-          <label for="array" style="font-size:16px;font-weight:600;color:#ffffff;">Array</label>
+          <label for="array" class="createHeading">Array</label>
           <input id="array" type="text" placeholder="Example: M00MC">
           <div class="hint"><b>M</b>=Master Key, <b>C</b>=Change Key, <b>0</b>=Empty</div>
         </div>
